style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}


body {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  background-color: #f8f9fa;
  padding: 40px;
}

.container {
  max-width: 600px;
  background: white;
  padding: 40px;
  border-radius: 8px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

h2,
h3 {
  margin: 20px 0;
}

.module-section {
  display: none;
}

.module-section.active {
  display: block;
}


.pregunta {
  display: none;
}

.pregunta.active {
  display: block;
}

.btn-form-group {
  width: 100%;
  height: auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
 
}

.btn-form {
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
}

/*button colors*/

.btn-green {
 background-color: #28a745;
 color: white;
}

.btn-red {
  background-color: #dc3545;
  color: white;
}

.btn-blue {
  background-color: #2D1C7D;
  color: white;
  font-weight: bold;
}

.btn-blue:hover {
  background-color: #F39C12;
}

.btn-gray {
  display: none;
  background-color: #979A9A;
  color: white;
}

.btn-orange {
  display: none;
  background-color: #F39C12;
  color: white;
}


/*table*/
.fila-invisible {
  display: none;
}

